--- a/ManageGo/Views/PaymentFilterView.xaml
+++ b/ManageGo/Views/PaymentFilterView.xaml
@@ -28,7 +28,7 @@
 
                 <!-- date filter -->
                 <Grid VerticalOptions="FillAndExpand"
-                      Padding="0,17"
+                      Padding="0,0"
                       RowSpacing="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -39,13 +39,23 @@
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
+                    <StackLayout Padding="0,17"
+                                 Grid.Row="0"
+                                 Grid.Column="0">
+                        <Label
+                            Text="Date"
+                            VerticalOptions="EndAndExpand"
+                            TextColor="{Binding SelectedDateRangeString,Converter={StaticResource FilterFieldStringToColor}}"
+                            FontSize="Small">
 
-                    <Label Grid.Column="0"
-                           Grid.Row="0"
-                           Text="Date"
-                           VerticalOptions="EndAndExpand"
-                           TextColor="{Binding SelectedDateRangeString,Converter={StaticResource FilterFieldStringToColor}}"
-                           FontSize="Small" />
+                        </Label>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnExpandFilterTapped}"
+                                                  CommandParameter="DueDates" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+
                     <Grid IsVisible="{Binding FilterDueDateExpanded}"
                           Grid.Column="0"
                           Grid.Row="1"
@@ -60,23 +70,39 @@
                                                HeightRequest="245"
                                                AllowMultipleSelection="true" />
                     </Grid>
-                    <Label Grid.Row="0"
-                           Grid.Column="1"
-                           VerticalOptions="EndAndExpand"
-                           Text="{Binding SelectedDateRangeString}"
-                           LineBreakMode="TailTruncation"
-                           TextColor="Gray"
-                           FontSize="Small" />
-                    <Image Grid.Column="2"
-                           Grid.Row="0"
-                           VerticalOptions="CenterAndExpand"
-                           HorizontalOptions="EndAndExpand"
-                           Source="chevron_right.png" />
-                    <Grid.GestureRecognizers>
-                        <TapGestureRecognizer NumberOfTapsRequired="1"
-                                              Command="{Binding OnExpandFilterTapped}"
-                                              CommandParameter="DueDates" />
-                    </Grid.GestureRecognizers>
+                    <StackLayout Padding="0,17"
+                                 Grid.Row="0"
+                                 Grid.Column="1">
+                        <Label
+                            VerticalOptions="EndAndExpand"
+                            Text="{Binding SelectedDateRangeString}"
+                            LineBreakMode="TailTruncation"
+                            TextColor="Gray"
+                            FontSize="Small">
+
+                        </Label>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnExpandFilterTapped}"
+                                                  CommandParameter="DueDates" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+                    <StackLayout Padding="0,17"
+                                 Grid.Row="0"
+                                 Grid.Column="2">
+                        <Image Grid.Column="2"
+                               Grid.Row="0"
+                               VerticalOptions="CenterAndExpand"
+                               HorizontalOptions="EndAndExpand"
+                               Source="chevron_right.png">
+
+                        </Image>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnExpandFilterTapped}"
+                                                  CommandParameter="DueDates" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
                 </Grid>
                 <BoxView HeightRequest="1"
                          BackgroundColor="Silver"
