--- a/ManageGo/Views/TransactionsFilterPage.xaml
+++ b/ManageGo/Views/TransactionsFilterPage.xaml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:local="clr-namespace:ManageGo"
              x:Name="ThisPage"
              xmlns:controls="clr-namespace:ManageGo.Controls"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ManageGo.Views.TransactionsFilterPage">
-     <ContentView.Resources>
+    <ContentView.Resources>
         <local:FilterFieldStringToColor x:Key="FilterFieldStringToColor" />
     </ContentView.Resources>
     <ScrollView>
         <StackLayout Spacing="0">
-            <StackLayout Padding="21,17,21,17" Spacing="0">
-                <StackLayout Orientation="Horizontal" Padding="0,6">
+            <StackLayout Padding="21,17,21,17"
+                         Spacing="0">
+                <StackLayout Orientation="Horizontal"
+                             Padding="0,6">
                     <Image Source="search_grey" />
-                    <local:CustomEntry Placeholder="Search..." Text="{Binding FilterKeywords}" FontSize="Small"  HorizontalOptions="FillAndExpand" />
+                    <local:CustomEntry Placeholder="Search..."
+                                       Text="{Binding FilterKeywords}"
+                                       FontSize="Small"
+                                       HorizontalOptions="FillAndExpand" />
                 </StackLayout>
-                <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
-             
+                <BoxView HeightRequest="1"
+                         BackgroundColor="Silver"
+                         HorizontalOptions="FillAndExpand" />
+
                 <!-- date filter -->
-                <Grid Padding="0,17">
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
@@ -28,26 +35,68 @@
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                  
-                    <Label Grid.Column="0" Grid.Row="0" Text="Date" TextColor="{Binding CalendarButtonText,Converter={StaticResource FilterFieldStringToColor}}" FontSize="Small" />
-                    <Grid IsVisible="{Binding FilterDateRangeExpanded}" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3">
+                    <StackLayout Padding="0,17"
+                                 Grid.Column="0"
+                                 Grid.Row="0">
+                        <Label Text="Date"
+                               TextColor="{Binding CalendarButtonText,Converter={StaticResource FilterFieldStringToColor}}"
+                               FontSize="Small" />
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnExpandFilterTapped}"
+                                                  CommandParameter="DueDates" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+                    <Grid IsVisible="{Binding FilterDateRangeExpanded}"
+                          Grid.Column="0"
+                          Grid.Row="1"
+                          Grid.ColumnSpan="3">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <controls:CalendarView Grid.Row="1" WidthRequest="490" SelectedDates="{Binding SelectedDateRange}" HeightRequest="245" AllowMultipleSelection="true"/>
+                        <controls:CalendarView Grid.Row="1"
+                                               WidthRequest="490"
+                                               SelectedDates="{Binding SelectedDateRange}"
+                                               HeightRequest="245"
+                                               AllowMultipleSelection="true" />
                     </Grid>
-                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding SelectedDateRangeString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
-                        <Label.GestureRecognizers>
-                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="DueDates" />
-                        </Label.GestureRecognizers>
-                    </Label>
-                    <Image Grid.Column="2" Grid.Row="0" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
-                    <Grid.GestureRecognizers>
-                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="DueDates" />
-                    </Grid.GestureRecognizers>
+                    <StackLayout Padding="0,17"
+                                 Grid.Column="1"
+                                 Grid.Row="0">
+                        <Label Grid.Row="0"
+                               Grid.Column="1"
+                               Text="{Binding SelectedDateRangeString}"
+                               LineBreakMode="TailTruncation"
+                               TextColor="Gray"
+                               FontSize="Small">
+
+                        </Label>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnExpandFilterTapped}"
+                                                  CommandParameter="DueDates" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+                    <StackLayout Padding="0,17"
+                                 Grid.Column="2"
+                                 Grid.Row="0">
+                        <Image Grid.Column="2"
+                               Grid.Row="0"
+                               VerticalOptions="StartAndExpand"
+                               HorizontalOptions="EndAndExpand"
+                               Source="chevron_right.png" />
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnExpandFilterTapped}"
+                                                  CommandParameter="DueDates" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+
                 </Grid>
-                <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
+                <BoxView HeightRequest="1"
+                         BackgroundColor="Silver"
+                         HorizontalOptions="FillAndExpand" />
 
                 <!-- Amount range filter -->
                 <Grid Padding="0,17">
@@ -60,18 +109,37 @@
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <Label Grid.Column="0" Grid.Row="0" Text="Amount" TextColor="{Binding FilterAmountString,Converter={StaticResource FilterFieldStringToColor}}" FontSize="Small" />
-                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding FilterAmountString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
+                    <Label Grid.Column="0"
+                           Grid.Row="0"
+                           Text="Amount"
+                           TextColor="{Binding FilterAmountString,Converter={StaticResource FilterFieldStringToColor}}"
+                           FontSize="Small" />
+                    <Label Grid.Row="0"
+                           Grid.Column="1"
+                           Text="{Binding FilterAmountString}"
+                           LineBreakMode="TailTruncation"
+                           TextColor="Gray"
+                           FontSize="Small">
                         <Label.GestureRecognizers>
-                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandAmountFilterTapped}" CommandParameter="DueDates" />
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnExpandAmountFilterTapped}"
+                                                  CommandParameter="DueDates" />
                         </Label.GestureRecognizers>
                     </Label>
-                    <Image Grid.Column="2" Grid.Row="0" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
-                     <Grid.GestureRecognizers>
-                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandAmountFilterTapped}" CommandParameter="DueDates" />
+                    <Image Grid.Column="2"
+                           Grid.Row="0"
+                           VerticalOptions="StartAndExpand"
+                           HorizontalOptions="EndAndExpand"
+                           Source="chevron_right.png" />
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer NumberOfTapsRequired="1"
+                                              Command="{Binding OnExpandAmountFilterTapped}"
+                                              CommandParameter="DueDates" />
                     </Grid.GestureRecognizers>
                 </Grid>
-                <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
+                <BoxView HeightRequest="1"
+                         BackgroundColor="Silver"
+                         HorizontalOptions="FillAndExpand" />
                 <!-- bank account filter -->
                 <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
@@ -79,21 +147,39 @@
                         <ColumnDefinition Width="3*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Text="Account" TextColor="{Binding SelectedAccountString,Converter={StaticResource FilterFieldStringToColor}}" FontSize="Small" />
+                    <Label Grid.Column="0"
+                           Text="Account"
+                           TextColor="{Binding SelectedAccountString,Converter={StaticResource FilterFieldStringToColor}}"
+                           FontSize="Small" />
                     <StackLayout Grid.Column="1">
-                        <Label Text="{Binding SelectedAccountString}" LineBreakMode="TailTruncation" TextColor="{StaticResource Grey-Light-1}" FontSize="Small"/>
-                        <controls:NestedListView IsVisible="{Binding FilterAccountsExpanded}" ItemsSource="{Binding BankAccounts}" Margin="0,8,0,0" HasUnevenRows="true" SeparatorVisibility="None"  HeightRequest="150" SelectionMode="None">
+                        <Label Text="{Binding SelectedAccountString}"
+                               LineBreakMode="TailTruncation"
+                               TextColor="{StaticResource Grey-Light-1}"
+                               FontSize="Small" />
+                        <controls:NestedListView IsVisible="{Binding FilterAccountsExpanded}"
+                                                 ItemsSource="{Binding BankAccounts}"
+                                                 Margin="0,8,0,0"
+                                                 HasUnevenRows="true"
+                                                 SeparatorVisibility="None"
+                                                 HeightRequest="150"
+                                                 SelectionMode="None">
                             <x:Arguments>
                                 <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
                             </x:Arguments>
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
-                                        <StackLayout Orientation="Horizontal" Margin="0,12,0,0">
+                                        <StackLayout Orientation="Horizontal"
+                                                     Margin="0,12,0,0">
                                             <Image Source="{Binding CheckBoxImage}" />
-                                            <Label Text="{Binding Title}" VerticalOptions="CenterAndExpand" LineBreakMode="MiddleTruncation" FontSize="Small" />
+                                            <Label Text="{Binding Title}"
+                                                   VerticalOptions="CenterAndExpand"
+                                                   LineBreakMode="MiddleTruncation"
+                                                   FontSize="Small" />
                                             <StackLayout.GestureRecognizers>
-                                                <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnBankAccountTapped, Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
+                                                <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                                      Command="{Binding BindingContext.OnBankAccountTapped, Source={x:Reference ThisPage}}"
+                                                                      CommandParameter="{Binding .}" />
                                             </StackLayout.GestureRecognizers>
                                         </StackLayout>
                                     </ViewCell>
@@ -101,9 +187,14 @@
                             </ListView.ItemTemplate>
                         </controls:NestedListView>
                     </StackLayout>
-                    <Image VerticalOptions="StartAndExpand" Grid.Column="2" HorizontalOptions="EndAndExpand" Source="chevron_right.png" />
+                    <Image VerticalOptions="StartAndExpand"
+                           Grid.Column="2"
+                           HorizontalOptions="EndAndExpand"
+                           Source="chevron_right.png" />
                     <Grid.GestureRecognizers>
-                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Accounts" />
+                        <TapGestureRecognizer NumberOfTapsRequired="1"
+                                              Command="{Binding OnExpandFilterTapped}"
+                                              CommandParameter="Accounts" />
                     </Grid.GestureRecognizers>
                 </Grid>
             </StackLayout>
