--- a/ManageGo/Views/CalendarPage.xaml
+++ b/ManageGo/Views/CalendarPage.xaml
@@ -1,116 +1,190 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              ios:Page.UseSafeArea="true"
              x:Name="ThisPage"
              BackgroundColor="{StaticResource Off-White}"
              xmlns:local="clr-namespace:ManageGo"
-              xmlns:controls="clr-namespace:ManageGo.Controls"
+             xmlns:controls="clr-namespace:ManageGo.Controls"
              x:Class="ManageGo.CalendarPage">
-        <Grid RowSpacing="0"
-              RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,
+    <Grid RowSpacing="0"
+          RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,
                              Property=Height, Factor=1, Constant=0}"
-              RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,
-                             Property=Width, Factor=1, Constant=0}" >
+          RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,
+                             Property=Width, Factor=1, Constant=0}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <StackLayout Grid.Row="0"
+                     BackgroundColor="White"
+                     Orientation="Horizontal"
+                     Padding="8"
+                     HeightRequest="42">
+            <Button BackgroundColor="Transparent"
+                    Command="{Binding OnMasterMenuTapped}"
+                    HorizontalOptions="Start"
+                    WidthRequest="42"
+                    IsVisible="{Binding HamburgerIsVisible}"
+                    VerticalOptions="CenterAndExpand"
+                    Image="nav_menu_icon.png" />
+            <Image Source="logo.png"
+                   Margin="-50,0,0,0"
+                   VerticalOptions="CenterAndExpand"
+                   HorizontalOptions="CenterAndExpand" />
+        </StackLayout>
+        <StackLayout Spacing="0"
+                     Grid.Row="1"
+                     BackgroundColor="White">
+            <Label Text="Calendar"
+                   Margin="0,8,0,7"
+                   Style="{StaticResource PageTitle}" />
+            <BoxView HeightRequest="1"
+                     BackgroundColor="{StaticResource Primary}" />
+        </StackLayout>
+        <Grid Grid.Row="2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <StackLayout Grid.Row="0" BackgroundColor="White" Orientation="Horizontal" Padding="8" HeightRequest="42">
-                <Button BackgroundColor="Transparent"
-                        Command="{Binding OnMasterMenuTapped}"
-                        HorizontalOptions="Start"
-                        WidthRequest="42"
-                        IsVisible="{Binding HamburgerIsVisible}"
-                        VerticalOptions="CenterAndExpand"
-                        Image="nav_menu_icon.png" />
-                <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+            <StackLayout Grid.Row="0">
+                <ContentView x:Name="CalContainer" />
             </StackLayout>
-            <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
-                <Label Text="Calendar" Margin="0,8,0,7" Style="{StaticResource PageTitle}" />
-                <BoxView HeightRequest="1" BackgroundColor="{StaticResource Primary}" />
-            </StackLayout>
-            <Grid Grid.Row="2">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-              <controls:CalendarView x:Name="CalView" Grid.Row="0" VerticalOptions="Start" HeightRequest="250"  SelectedDate="{Binding SelectedDate}" HighlightedDates="{Binding HighlightedDates}"  />
-              <controls:NestedListView x:Name="CalEventList" Grid.Row="1" ItemsSource="{Binding CalendarEvents}" SelectionMode="None" HasUnevenRows="true" BackgroundColor="Transparent" SeparatorVisibility="None" Margin="22,18,22,18" >
-                    <x:Arguments>
-                        <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
-                    </x:Arguments>
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <Frame HasShadow="false" BackgroundColor="White"  Margin="0,0,0,12" Padding="14,6,14,6">
-                                    <StackLayout Orientation="Horizontal" Margin="0,8,0,8" Spacing="17">
-                                        <Image Source="calendar_blue.png" Margin="8,0,0,0" HorizontalOptions="Center" VerticalOptions="StartAndExpand"/>
-                                        <StackLayout HorizontalOptions="FillAndExpand">
-                                            <StackLayout Orientation="Horizontal">
-                                                <Label Text="{Binding HeaderTime}" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" />
-                                                <Label Text="-" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
-                                                <Label Text="{Binding HeaderDate}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
-                                                <StackLayout WidthRequest="18" HeightRequest="18" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand">
-                                                    <Image Source="{Binding ExpandButtonIcon}" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand"/>
-                                                </StackLayout>
-                                                
-                                                </StackLayout>
-                                            <StackLayout>
-                                                <Label Text="{Binding Title}" FontSize="Medium" FontAttributes="Bold" TextColor="{StaticResource Grey-Dark-1}" />
-                                               
+
+            <controls:CustomListView x:Name="CalEventList"
+                                     Grid.Row="1"
+                                     SelectionMode="None"
+                                     HasUnevenRows="true"
+                                     BackgroundColor="Transparent"
+                                     SeparatorVisibility="None"
+                                     Margin="22,18,22,18">
+                <x:Arguments>
+                    <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
+                </x:Arguments>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Frame HasShadow="false"
+                                   BackgroundColor="White"
+                                   Margin="0,0,0,12"
+                                   Padding="14,6,14,6">
+                                <StackLayout Orientation="Horizontal"
+                                             Margin="0,8,0,8"
+                                             Spacing="17">
+                                    <Image Source="calendar_blue.png"
+                                           Margin="8,0,0,0"
+                                           HorizontalOptions="Center"
+                                           VerticalOptions="StartAndExpand" />
+                                    <StackLayout HorizontalOptions="FillAndExpand">
+                                        <StackLayout Orientation="Horizontal">
+                                            <Label Text="{Binding HeaderTime}"
+                                                   FontSize="Small"
+                                                   TextColor="{StaticResource Grey-Mid-1}" />
+                                            <Label Text="-"
+                                                   FontSize="Small"
+                                                   TextColor="{StaticResource Grey-Light-1}" />
+                                            <Label Text="{Binding HeaderDate}"
+                                                   FontSize="Small"
+                                                   TextColor="{StaticResource Grey-Light-1}" />
+                                            <StackLayout WidthRequest="18"
+                                                         HeightRequest="18"
+                                                         HorizontalOptions="EndAndExpand"
+                                                         VerticalOptions="CenterAndExpand">
+                                                <Image Source="{Binding ExpandButtonIcon}"
+                                                       VerticalOptions="StartAndExpand"
+                                                       HorizontalOptions="EndAndExpand" />
                                             </StackLayout>
-                                            <StackLayout Spacing="8" Orientation="Horizontal">
-                                                <Image Source="building_grey.png" VerticalOptions="CenterAndExpand" />
-                                                <Label VerticalOptions="CenterAndExpand" Text="{Binding HeaderAddress}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
-                                               
-                                            </StackLayout>
-                                            <StackLayout IsVisible="{Binding DetailsShown}" Margin="0,12,0,0">
-                                                <Label Text="{Binding Note}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
-                                                <BoxView HeightRequest="1" Margin="0,18,0,0" BackgroundColor="{StaticResource Grey-Light-2}" />
-                                                <Frame HasShadow="false" BackgroundColor="{StaticResource Grey-Light-2}">
-                                                    <Label Text="View ticket" FontSize="Small" TextColor="{StaticResource Primary}" HorizontalOptions="StartAndExpand"/>
-                                                    <Frame.GestureRecognizers>
-                                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnViewTicketTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
-                                                    </Frame.GestureRecognizers>
-                                                </Frame>
+
                                         </StackLayout>
+                                        <StackLayout>
+                                            <Label Text="{Binding Title}"
+                                                   FontSize="Medium"
+                                                   FontAttributes="Bold"
+                                                   TextColor="{StaticResource Grey-Dark-1}" />
+
+                                        </StackLayout>
+                                        <StackLayout Spacing="8"
+                                                     Orientation="Horizontal">
+                                            <Image Source="building_grey.png"
+                                                   VerticalOptions="CenterAndExpand" />
+                                            <Label VerticalOptions="CenterAndExpand"
+                                                   Text="{Binding HeaderAddress}"
+                                                   FontSize="Small"
+                                                   TextColor="{StaticResource Grey-Light-1}" />
+
+                                        </StackLayout>
+                                        <StackLayout IsVisible="{Binding DetailsShown}"
+                                                     Margin="0,12,0,0">
+                                            <Label Text="{Binding Note}"
+                                                   FontSize="Small"
+                                                   TextColor="{StaticResource Grey-Light-1}" />
+                                            <BoxView HeightRequest="1"
+                                                     Margin="0,18,0,0"
+                                                     BackgroundColor="{StaticResource Grey-Light-2}" />
+                                            <Frame HasShadow="false"
+                                                   BackgroundColor="{StaticResource Grey-Light-2}">
+                                                <Label Text="View ticket"
+                                                       FontSize="Small"
+                                                       TextColor="{StaticResource Primary}"
+                                                       HorizontalOptions="StartAndExpand" />
+                                                <Frame.GestureRecognizers>
+                                                    <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                                          Command="{Binding BindingContext.OnViewTicketTapped,Source={x:Reference ThisPage}}"
+                                                                          CommandParameter="{Binding .}" />
+                                                </Frame.GestureRecognizers>
+                                            </Frame>
                                         </StackLayout>
                                     </StackLayout>
-                                    <Frame.GestureRecognizers>
-                                        <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="Handle_Tapped" Command="{Binding BindingContext.OnShowDetailsTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
-                                    </Frame.GestureRecognizers>
-                                </Frame>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </controls:NestedListView>
-             <Frame IsVisible="{Binding IsLoading}" 
-                    Grid.Row="1" HasShadow="false" 
-                    BackgroundColor="Transparent" 
-                    VerticalOptions="CenterAndExpand" 
-                    HorizontalOptions="CenterAndExpand">
-            <StackLayout>
-                <ActivityIndicator Color="Gray" IsRunning="true" HorizontalOptions="Center" VerticalOptions="Center" />
-                <Label Text="Searching..." TextColor="Gray"/>
-            </StackLayout>
-        </Frame>
-            <Frame IsVisible="{Binding DateHasNoEvents}" 
-                    Grid.Row="1" HasShadow="false" 
-                    BackgroundColor="Transparent" 
-                    VerticalOptions="CenterAndExpand" 
-                    HorizontalOptions="CenterAndExpand">
+                                </StackLayout>
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                          Tapped="Handle_Tapped"
+                                                          Command="{Binding BindingContext.OnShowDetailsTapped,Source={x:Reference ThisPage}}"
+                                                          CommandParameter="{Binding .}" />
+                                </Frame.GestureRecognizers>
+                            </Frame>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </controls:CustomListView>
+            <Frame IsVisible="{Binding IsLoading}"
+                   Grid.Row="1"
+                   HasShadow="false"
+                   BackgroundColor="Transparent"
+                   VerticalOptions="CenterAndExpand"
+                   HorizontalOptions="CenterAndExpand">
                 <StackLayout>
-                    <Label Text="Nothing to see here" FontSize="Small" HorizontalTextAlignment="Center" TextColor="Gray"/>
-                    <Label Text="Select a highlighted date" FontSize="Small" HorizontalTextAlignment="Center" TextColor="Gray"/>
+                    <ActivityIndicator Color="Gray"
+                                       IsRunning="true"
+                                       HorizontalOptions="Center"
+                                       VerticalOptions="Center" />
+                    <Label Text="Searching..."
+                           TextColor="Gray" />
                 </StackLayout>
             </Frame>
-            </Grid>
-            
-            
+            <Frame IsVisible="{Binding DateHasNoEvents}"
+                   Grid.Row="1"
+                   HasShadow="false"
+                   BackgroundColor="Transparent"
+                   VerticalOptions="CenterAndExpand"
+                   HorizontalOptions="CenterAndExpand">
+                <StackLayout>
+                    <Label Text="Nothing to see here"
+                           FontSize="Small"
+                           HorizontalTextAlignment="Center"
+                           TextColor="Gray" />
+                    <Label Text="Select a highlighted date"
+                           FontSize="Small"
+                           HorizontalTextAlignment="Center"
+                           TextColor="Gray" />
+                </StackLayout>
+            </Frame>
         </Grid>
-       
- 
+
+
+    </Grid>
+
+
 </ContentPage>
