--- a/ManageGo/Views/TenantsPage.xaml
+++ b/ManageGo/Views/TenantsPage.xaml
@@ -120,12 +120,13 @@
             </StackLayout>
             <StackLayout BackgroundColor="{StaticResource Grey-Light-2}"
                          Grid.Row="2">
-                <controls:NestedListView ItemsSource="{Binding FetchedTenants}"
-                                         SelectionMode="None"
-                                         HasUnevenRows="true"
-                                         BackgroundColor="Transparent"
-                                         SeparatorVisibility="None"
-                                         Margin="22,18,22,18">
+                <controls:CustomListView
+                    x:Name="TenantsListView"
+                    SelectionMode="None"
+                    HasUnevenRows="true"
+                    BackgroundColor="Transparent"
+                    SeparatorVisibility="None"
+                    Margin="22,18,22,18">
                     <x:Arguments>
                         <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
                     </x:Arguments>
@@ -235,7 +236,7 @@
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-                </controls:NestedListView>
+                </controls:CustomListView>
             </StackLayout>
             <Frame IsVisible="{Binding IsLoading}"
                    Grid.Row="2"
