--- a/ManageGo/Views/TransactionsPage.xaml
+++ b/ManageGo/Views/TransactionsPage.xaml
@@ -152,7 +152,7 @@
             </StackLayout>
             <StackLayout BackgroundColor="{StaticResource Grey-Light-2}"
                          Grid.Row="2">
-                <controls:NestedListView ItemsSource="{Binding FetchedTransactions}"
+                <controls:CustomListView ItemsSource="{Binding FetchedTransactions}"
                                          x:Name="TransactionsList"
                                          SelectionMode="None"
                                          HasUnevenRows="true"
@@ -344,7 +344,7 @@
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-                </controls:NestedListView>
+                </controls:CustomListView>
             </StackLayout>
             <Frame IsVisible="{Binding IsLoading}"
                    Grid.Row="2"
