--- a/ManageGo/Views/UnitsListPage.xaml
+++ b/ManageGo/Views/UnitsListPage.xaml
@@ -59,7 +59,7 @@
             </StackLayout>
             <StackLayout BackgroundColor="{StaticResource Grey-Light-2}"
                          Grid.Row="2">
-                <controls:NestedListView ItemsSource="{Binding Units}"
+                <controls:CustomListView ItemsSource="{Binding Units}"
                                          SelectionMode="None"
                                          HasUnevenRows="true"
                                          BackgroundColor="White"
@@ -114,7 +114,7 @@
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-                </controls:NestedListView>
+                </controls:CustomListView>
 
             </StackLayout>
             <Frame IsVisible="{Binding IsLoading}"
